--- a/git_modules.conf
+++ b/git_modules.conf
@@ -15,10 +15,10 @@ ModuleControlsACLs lsmod allow user *
 #This is required only if you need to set IdentLookups on
 #LoadModule mod_ident.c
 
-LoadModule mod_ctrls_admin.c
+#LoadModule mod_ctrls_admin.c
 
 # Install proftpd-mod-crypto to use this module for TLS/SSL support.
-#LoadModule mod_tls.c
+LoadModule mod_tls.c
 # Even these modules depend on the previous one
 #LoadModule mod_tls_fscache.c
 #LoadModule mod_tls_shmcache.c
