--- a/git_proftpd.conf
+++ b/git_proftpd.conf
@@ -140,7 +140,7 @@ AdminControlsEngine off
 #
 # This is used for FTPS connections
 #
-#Include /etc/proftpd/tls.conf
+Include /etc/proftpd/tls.conf
 
 #
 # This is used for SFTP connections
