--- a/git_tls.conf
+++ b/git_tls.conf
@@ -32,7 +32,7 @@ TLSRSACertificateKeyFile                /etc/proftpd/ssl/proftpd-key.pem
 # ...or avoid CA cert and be verbose
 #TLSOptions                      NoCertRequest EnableDiags 
 # ... or the same with relaxed session use for some clients (e.g. FireFtp)
-#TLSOptions                      NoCertRequest EnableDiags NoSessionReuseRequired
+TLSOptions                      NoCertRequest EnableDiags NoSessionReuseRequired
 #
 #
 # Per default drop connection if client tries to start a renegotiate
@@ -42,7 +42,7 @@ TLSOptions 							AllowClientRenegotiations
 #
 # Authenticate clients that want to use FTP over TLS?
 #
-#TLSVerifyClient                         off
+TLSVerifyClient                         off
 #
 # Are clients required to use FTP over TLS when talking to this server?
 #
