--- a/git_tls.conf
+++ b/git_tls.conf
@@ -32,13 +32,13 @@ TLSRSACertificateKeyFile                /etc/proftpd/ssl/proftpd-key.pem
 # ...or avoid CA cert and be verbose
 #TLSOptions                      NoCertRequest EnableDiags 
 # ... or the same with relaxed session use for some clients (e.g. FireFtp)
-TLSOptions                      NoCertRequest EnableDiags NoSessionReuseRequired
+TLSOptions                       NoSessionReuseRequired
 #
 #
 # Per default drop connection if client tries to start a renegotiate
 # This is a fix for CVE-2009-3555 but could break some clients.
 #
-TLSOptions 							AllowClientRenegotiations
+#TLSOptions 							AllowClientRenegotiations
 #
 # Authenticate clients that want to use FTP over TLS?
 #
@@ -54,6 +54,6 @@ TLSRequired                             on
 # clients will close the data connection, or there will be a timeout
 # on an idle data connection.
 #
-TLSRenegotiate                          required off
+#TLSRenegotiate                          required off
 </IfModule>
 
