--- a/git_proftpd.conf
+++ b/git_proftpd.conf
@@ -161,50 +161,41 @@ Include /etc/proftpd/tls.conf
 
 # A basic anonymous configuration, no upload directories.
 
-# <Anonymous ~ftp>
-#   User ftp
-#   Group nogroup
-#   # We want clients to be able to login with "anonymous" as well as "ftp"
-#   UserAlias anonymous ftp
-#   # Cosmetic changes, all files belongs to ftp user
-#   DirFakeUser on ftp
-#   DirFakeGroup on ftp
-# 
-#   RequireValidShell off
-# 
-#   # Limit the maximum number of anonymous logins
-#   MaxClients 10
-# 
-#   # We want 'welcome.msg' displayed at login, and '.message' displayed
-#   # in each newly chdired directory.
-#   DisplayLogin welcome.msg
-#   DisplayChdir .message
-# 
-#   # Limit WRITE everywhere in the anonymous chroot
-#   <Directory *>
-#     <Limit WRITE>
-#       DenyAll
-#     </Limit>
-#   </Directory>
-# 
-#   # Uncomment this if you're brave.
-#   # <Directory incoming>
-#   #   # Umask 022 is a good standard umask to prevent new files and dirs
-#   #   # (second parm) from being group and world writable.
-#   #   Umask022  022
-#   #   <Limit READ WRITE>
-#   #     DenyAll
-#   #     </Limit>
-#   #       <Limit STOR>
-#   #         AllowAll
-#   #     </Limit>
-#   # </Directory>
-# 
-# </Anonymous>
-
-# Include other custom configuration files
-# !! Please note, that this statement will read /all/ file from this subdir,
-# i.e. backup files created by your editor, too !!!
-# Eventually create file patterns like this: /etc/proftpd/conf.d/*.conf
-# 
-Include /etc/proftpd/conf.d/
+ <Anonymous ~ftp>
+   User ftp
+   Group nogroup
+   # We want clients to be able to login with "anonymous" as well as "ftp"
+   UserAlias anonymous ftp
+   # Cosmetic changes, all files belongs to ftp user
+   DirFakeUser on ftp
+   DirFakeGroup on ftp
+ 
+   RequireValidShell off
+ 
+   # Limit the maximum number of anonymous logins
+   MaxClients 10
+ 
+   # We want 'welcome.msg' displayed at login, and '.message' displayed
+   # in each newly chdired directory.
+   DisplayLogin welcome.msg
+   DisplayChdir .message
+ 
+   # Limit WRITE everywhere in the anonymous chroot
+   <Directory *>
+     <Limit WRITE>
+       DenyAll
+     </Limit>
+   </Directory>
+ 
+   # Uncomment this if you're brave.
+   # <Directory incoming>
+   #   # Umask 022 is a good standard umask to prevent new files and dirs
+   #   # (second parm) from being group and world writable.
+   #   Umask022  022
+   #   <Limit READ WRITE>
+   #     DenyAll
+   #     </Limit>
+   #       <Limit STOR>
+   #         AllowAll
+   #     </Limit>
+   # </Directory>
