--- a/git_tls.conf
+++ b/git_tls.conf
@@ -21,7 +21,7 @@ TLSProtocol                             SSLv23
 # The proftpd.key file must be readable by root only. The other file can be
 # readable by anyone.
 #
-# chmod 0600 /etc/ssl/private/proftpd.key 
+# chmod 0600 /etc/proftpd/ssl/proftpd-key.pem 
 # chmod 0640 /etc/ssl/private/proftpd.key
 # 
 TLSRSACertificateFile                   /etc/proftpd/ssl/proftpd-rsa.pem
@@ -32,7 +32,7 @@ TLSRSACertificateKeyFile                /etc/proftpd/ssl/proftpd-key.pem
 # ...or avoid CA cert and be verbose
 #TLSOptions                      NoCertRequest EnableDiags 
 # ... or the same with relaxed session use for some clients (e.g. FireFtp)
-TLSOptions                       NoSessionReuseRequired
+TLSOptions                      				NoSessionReuseRequired
 #
 #
 # Per default drop connection if client tries to start a renegotiate
@@ -56,4 +56,3 @@ TLSRequired                             on
 #
 #TLSRenegotiate                          required off
 </IfModule>
-
